user: updated security config.